--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 16px;
 	color: #fff;
-	background: #40155A;
+	background: hotpink;
 }
 
 h1, h2, h3, h4, h5, h6 {
