--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 16px;
 	color: #fff;
-	background: hotpink;
+	background: #40155A;
 }
 
 
