--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 /* Global styles */
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&family=Poppins:wght@300;400;600&display=swap');
+
+
 *,
 *::before,
 *::after
